enerji sınıfı & yorum düzenlemesi

--- a/test/src/arcelik-test-scss/Base/Variables.scss
+++ b/test/src/arcelik-test-scss/Base/Variables.scss
@@ -1,12 +1,14 @@
 // General Definations
-//test
+//test 
 $baseHref: '//epm.test.arcelik.com';
-//canlı cdn $baseHref: '//img-arcelik.mncdn.com';
 //canlı $baseHref: '';
+//canlı cdn $baseHref: '//img-arcelik.mncdn.com';
 
 
 // Typography
 $fontDefault: "arial";
+//canlı $fontSite: "Gotham Rounded";
+//test 
 $fontSite: "Heron";
 $fontSite2: "Gotham";
 $fontSite3: "Gotham Rounded";
