--- a/test/src/arcelik-test-scss/Components/Header.scss
+++ b/test/src/arcelik-test-scss/Components/Header.scss
@@ -339,7 +339,9 @@
         }
         .mod-lang {
             position: relative;
+            //test
             display: inline-block;
+            //canlı display: none !important;
             vertical-align: top;
             margin-right: 15px;
             .mod-lang-body {
