EMS0004303338089_1 - Menü Border

--- a/test/src/arcelik-test-scss/Components/Header.scss
+++ b/test/src/arcelik-test-scss/Components/Header.scss
@@ -499,6 +499,7 @@
                     .op-menu{
                         justify-content: space-around;
                         padding-bottom: 54px;
+                        border-right: 1px solid #ebebeb;
                         > ul{
                             width: calc(100% - 20px);
                             display: flex;
