.gosterim-urun & captcha input bug

--- a/test/src/arcelik-test-scss/Components/Form.scss
+++ b/test/src/arcelik-test-scss/Components/Form.scss
@@ -139,7 +139,7 @@ textarea {
         height: 37px;
         border-right: 1px solid #e3e3e3;
     }
-    input {
+    input[id$="txtUYE_KONTROLKODU"] {
         padding-left: 160px;
     }
 }
