--- a/test/src/arcelik-test-scss/Base/Variables.scss
+++ b/test/src/arcelik-test-scss/Base/Variables.scss
@@ -25,6 +25,7 @@ $fontSizeDefault: 12px;
 $colorDefault: #333;
 $colorRed: #ED1C24;
 $colorRedDark: #D01219;
+$colorGray: #868686;
 
 // Layout
 $siteContainerWidth: 1006px;
