--- a/test/src/arcelik-test-scss/Components/Header.scss
+++ b/test/src/arcelik-test-scss/Components/Header.scss
@@ -62,7 +62,12 @@
                             border-bottom: 2px solid transparent;
                             font-family: $fontSite;
                             font-size: 16px;
-                            font-weight: 700;
+                            //EMS0004302537565_1 font-degisimi
+                            @if $release == live {
+                                font-weight: 700;
+                            } @else if $release == test {
+                                font-weight: 400;
+                            }
                             text-transform: uppercase;
                         }
                         &.selected {
@@ -339,11 +344,11 @@
         }
         .mod-lang {
             position: relative;
-                @if $release == test {
-                    display: inline-block;
-                } @else if $release == live {
-                    display: none !important;
-                }
+            @if $release == test {
+                display: inline-block;
+            } @else if $release == live {
+                display: none !important;
+            }
             vertical-align: top;
             margin-right: 15px;
             .mod-lang-body {
