--- a/test/src/arcelik-test-scss/Components/Slider.scss
+++ b/test/src/arcelik-test-scss/Components/Slider.scss
@@ -790,7 +790,12 @@
             padding: 20px;
             font-size: 12px;
             color: #acabab;
-            font-weight: 700;
+            //EMS0004302537565_1 font-degisimi
+            @if $release == live {
+                font-weight: 700;
+            } @else if $release == test {
+                font-weight: 400;
+            }
             letter-spacing: 3px;
             &:after {
                 content: "";
