--- a/test/src/arcelik-test-scss/Components/Product-List.scss
+++ b/test/src/arcelik-test-scss/Components/Product-List.scss
@@ -463,6 +463,9 @@ $row-5-outer: 20px;
                     line-height: 1.3;
                     height: 74px;
                     overflow: hidden;
+                    > .emos_invisible {
+                        display: block;
+                    }
                     ul.features {
                         line-height: 1.5;
                         li {
