--- a/test/src/arcelik-test-scss/style.css
+++ b/test/src/arcelik-test-scss/style.css
@@ -8492,6 +8492,34 @@ body .ui-datepicker table {
             border-width: 7.5px;
             border-style: solid;
             border-color: transparent transparent transparent #00A853; }
+          .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi.a-sinifi {
+            background: #f2e300; }
+            .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi.a-sinifi:after {
+              border-left-color: #f2e300; }
+            .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi.a-sinifi1 {
+              background: #bed927; }
+              .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi.a-sinifi1:after {
+                border-left-color: #bed927; }
+            .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi.a-sinifi2 {
+              background: #4cb945; }
+              .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi.a-sinifi2:after {
+                border-left-color: #4cb945; }
+            .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi.a-sinifi3 {
+              background: #00a751; }
+              .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi.a-sinifi3:after {
+                border-left-color: #00a751; }
+          .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi.b-sinifi {
+            background: #fcb90d; }
+            .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi.b-sinifi:after {
+              border-left-color: #fcb90d; }
+          .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi.c-sinifi {
+            background: #f3701f; }
+            .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi.c-sinifi:after {
+              border-left-color: #f3701f; }
+          .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi.d-sinifi {
+            background: #ee131b; }
+            .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi.d-sinifi:after {
+              border-left-color: #ee131b; }
       .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .urunListe_ParoAciklama {
         margin-top: 10px;
         height: 22px; }
@@ -12669,7 +12697,6 @@ form[name="frmBorusanLojistik"] > br {
     display: inline-block; }
 
 .ems-page-cart .ems-cart-coupon {
-  display: none;
   position: relative;
   padding: 25px;
   background: #f6f6f6; }
@@ -12690,6 +12717,9 @@ form[name="frmBorusanLojistik"] > br {
     .ems-page-cart .ems-cart-coupon table a.btnDefault {
       padding: 17px;
       font-size: 13px; }
+  .ems-page-cart .ems-cart-coupon a.btnHediyeCekiIptal {
+    margin-top: 5px;
+    display: block; }
   .ems-page-cart .ems-cart-coupon [id$="lblHCK_HATA"] {
     display: block;
     margin-top: 5px; }
